# corus_classification

./: README.md  dvc.yaml  load_raw_data.py  params.yaml  prepare_data.py  pyproject.toml
.dvc/: config
corus_rubrication/: load_raw_data.py  prepare_data.py  train_model.py
corus_rubrication/data/raw/: .gitignore
corus_rubrication/models/: model.pkl
corus_rubrication/notebooks/: EDA.ipynb
corus_rubrication/src/: natasha_preprocess.py  stopwords_russian.txt
src/: natasha_preprocess.py
tests/: test_corus_rubrication.py
