[tool.poetry]
name = "corus_rubrication"
version = "0.1.0"
description = ""
authors = ["EGM86e <egmforwrk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.6.4"
pandas = "^1.3.2"
wget = "^3.2"
natasha = "^1.4.0"
beautifulsoup4 = "^4.9.3"
ipykernel = "^6.3.1"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
